# const-addrs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  Makefile  README.md
.github/: pull_request_template.md
.github/workflows/: build-and-test.yml  formatting.yml  linting.yml
examples/: ip.rs
src/: lib.rs
tests/fail/: bad_tt.rs  bad_tt.stderr  ip.rs  ip.stderr  ip4.rs  ip4.stderr  ip6.rs  ip6.stderr  ipnet.rs  ipnet.stderr  ipnet4.rs  ipnet4.stderr  ipnet6.rs  ipnet6.stderr  iprange.rs  iprange.stderr  iprange4.rs  iprange4.stderr  iprange6.stderr  ipsubnets.rs  ipsubnets.stderr  ipsubnets4.rs  ipsubnets4.stderr  ipsubnets6.stderr  mac.rs  mac.stderr  mac6.rs  mac6.stderr  mac8.rs  mac8.stderr  net.rs  net.stderr  net4.rs  net4.stderr  net6.rs  net6.stderr  sock.rs  sock.stderr  sock4.rs  sock4.stderr  (+2 more)
tests/fail_nightly/: iprange.stderr  iprange4.stderr  iprange6.rs  iprange6.stderr  ipsubnets.stderr  ipsubnets4.stderr  ipsubnets6.rs  ipsubnets6.stderr
tests/pass/: ip.rs  ip4.rs  ip6.rs  ipnet.rs  ipnet4.rs  ipnet6.rs  iprange.rs  iprange4.rs  iprange6.rs  ipsubnets.rs  ipsubnets4.rs  ipsubnets6.rs  mac.rs  mac6.rs  mac8.rs  net.rs  net4.rs  net6.rs  sock.rs  sock4.rs  sock6.rs
tests/warnings/: iprange.rs  iprange.stderr  iprange4.rs  iprange4.stderr  iprange6.rs  iprange6.stderr  ipsubnets.rs  ipsubnets.stderr  ipsubnets4.rs  ipsubnets4.stderr  ipsubnets6.rs  ipsubnets6.stderr
