[package]
name = "net-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[features]
default = ["ipnet", "mac"]
ipnet = ["ipnetwork"]
mac = ["macaddr"]

[dependencies]
cfg-if = "1"
ipnetwork = { version = "0.20.0", optional = true }
macaddr = { version = "1.0", optional = true }
proc-macro-error = "1.0"
proc-macro2 = "1"
quote = "1.0"
syn = "2.0"

[dev-dependencies]
trybuild = "1"
ipnetwork = "0.20.0"
macaddr = "1.0"
