[package]
name = "const-addrs"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Erich Heine"]
description = "A set of macros for creating networking types from a string literal."
readme = "README.md"
repository = "https://github.com/sophacles/const-addrs"
exclude = ["Makefile"]

[lib]
proc-macro = true

[features]
#! The crate provides a set of optional features that can be enabled in your `cargo.toml` file.
#!
## By default, only generate stdlib types
default = []
## enables generation of [`ipnetwork`] types
ipnet = ["dep:ipnetwork"]
## enables generation of [`macaddr`] types
mac = ["dep:macaddr"]

[dependencies]
cfg-if = "1"
document-features = { version = "0.2", optional = true }
ipnetwork = { version = "0.20.0", optional = true, default-features = false }
macaddr = { version = "1.0", optional = true }
proc-macro-error = "1.0"
proc-macro2 = "1"
quote = "1.0"
syn = "2.0"

[dev-dependencies]
trybuild = "1"
ipnetwork = { version = "0.20.0", default-features = false }
macaddr = "1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
